# EMan

./: CMakeLists.txt  README.md  todos.md
bld/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/: EMan.cpp  EMan.h  main.cpp
